Fix slider overflowing the rounded corner

--- a/web/sites/all/themes/findit_cambridge/css/modules.css
+++ b/web/sites/all/themes/findit_cambridge/css/modules.css
@@ -754,6 +754,7 @@
 
 .ui-slider .ui-slider-range {
   background-color: rgb(42, 0, 88);
+  border-radius: .375em;
 }
 
 .ui-slider .ui-slider-handle {
